--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body::-webkit-scrollbar-thumb {
 #top {
     width: 100%;
     height: 1000px;
-    background-image: linear-gradient(#262626b3, #262626b3), url(HardStrengthGym/img/gymbg.jpg);
+    background-image: linear-gradient(#262626b3, #262626b3), url(https://raw.githubusercontent.com/ritviksakpal/HardStrengthGym/master/img/gymbg.jpg);
     background-clip: border-box;
     background-repeat: no-repeat;
     background-position: center;
@@ -266,7 +266,7 @@ body::-webkit-scrollbar-thumb {
     color: #eee;
     width: 100%;
     height: fit-content;
-    background-image: linear-gradient(rgba(38, 38, 38, 0.7), rgba(38, 38, 38, 0.7)), url(HardStrengthGym/img/banner.jpg);
+    background-image: linear-gradient(rgba(38, 38, 38, 0.7), rgba(38, 38, 38, 0.7)), url(https://raw.githubusercontent.com/ritviksakpal/HardStrengthGym/master/img/banner.jpg);
     background-clip: border-box;
     background-repeat: no-repeat;
     background-position: center;
@@ -418,7 +418,7 @@ body::-webkit-scrollbar-thumb {
     color: #eee;
     width: 100%;
     height: fit-content;
-    background-image: linear-gradient(#262626b3, #262626b3), url(HardStrengthGym/img/banner2.jpg);
+    background-image: linear-gradient(#262626b3, #262626b3), url(https://raw.githubusercontent.com/ritviksakpal/HardStrengthGym/master/img/banner2.jpg);
     background-clip: border-box;
     background-repeat: no-repeat;
     background-position: center;
