--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ li {
 
 body {
     background-color: #272727;
-    overflow-x: hidden;
+    overflow-x: hidden;    
+    position: fixed;
+
 }
 
 body::-webkit-scrollbar {
