--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ li {
 
 body {
     background-color: #272727;
-    overflow-x: hidden;
+    overflow: auto;
 }
 
 body::-webkit-scrollbar {
@@ -50,7 +50,7 @@ body::-webkit-scrollbar-thumb {
 #top {
     width: 100%;
     height: 1000px;
-    background-image: linear-gradient(#262626b3, #262626b3), url(https://raw.githubusercontent.com/ritviksakpal/HardStrengthGym/master/img/gymbg.jpg);
+    background-image: linear-gradient(#262626b3, #262626b3), url(/img/gymbg.jpg);
     background-clip: border-box;
     background-repeat: no-repeat;
     background-position: center;
@@ -85,6 +85,7 @@ body::-webkit-scrollbar-thumb {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    transition: all ease-in-out 0.7s;
 }
 
 .navframes a {
@@ -266,7 +267,7 @@ body::-webkit-scrollbar-thumb {
     color: #eee;
     width: 100%;
     height: fit-content;
-    background-image: linear-gradient(rgba(38, 38, 38, 0.7), rgba(38, 38, 38, 0.7)), url(https://raw.githubusercontent.com/ritviksakpal/HardStrengthGym/master/img/banner.jpg);
+    background-image: linear-gradient(rgba(38, 38, 38, 0.7), rgba(38, 38, 38, 0.7)), url(/img/banner.jpg);
     background-clip: border-box;
     background-repeat: no-repeat;
     background-position: center;
@@ -418,7 +419,7 @@ body::-webkit-scrollbar-thumb {
     color: #eee;
     width: 100%;
     height: fit-content;
-    background-image: linear-gradient(#262626b3, #262626b3), url(https://raw.githubusercontent.com/ritviksakpal/HardStrengthGym/master/img/banner2.jpg);
+    background-image: linear-gradient(#262626b3, #262626b3), url(/img/banner2.jpg);
     background-clip: border-box;
     background-repeat: no-repeat;
     background-position: center;
@@ -757,7 +758,7 @@ footer {
         overflow-x: hidden;
     }
     .navframes {
-        position: absolute;
+        /* position: absolute;
         right: 0;
         height: 92vh;
         top: 100px;
@@ -767,14 +768,29 @@ footer {
         background-color: #272727;
         width: 50%;
         transform: translateX(100%);
-        transition: all ease-in-out 0.4s;
+        transition: all ease-in-out 0.4s; */
+        display: none;
+        visibility: hidden;
+        transition: all ease-in-out 0.7s;
     }
     .burger {
         cursor: pointer;
         display: block;
     }
     .navlinks-active {
-        transform: translateX(0%);
+        /* transform: translateX(0%); */
+        position: absolute;
+        right: 0;
+        height: 92vh;
+        top: 100px;
+        display: flex;
+        flex-direction: column;
+        /* align-items: center; */
+        background-color: #272727;
+        width: 50%;
+        transition: all ease-in-out 0.7s;
+        visibility: visible;
+        justify-content: space-around;
     }
     body::-webkit-scrollbar {
         width: 0;
@@ -854,4 +870,4 @@ footer {
 }
 
 
-/* id=section's responsiveness has been done */
+/* status has been updated 08/28/20 */
