--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ shadow #1b1b1b
 banner #262626b3
 */
 
+html {
+    scroll-behavior: smooth;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -27,6 +31,8 @@ li {
 body {
     background-color: #272727;
     overflow: auto;
+    position: relative;
+    height: 100vh;
 }
 
 body::-webkit-scrollbar {
@@ -50,11 +56,24 @@ body::-webkit-scrollbar-thumb {
 #top {
     width: 100%;
     height: 1000px;
-    background-image: linear-gradient(#262626b3, #262626b3), url(https://raw.githubusercontent.com/ritviksakpal/HardStrengthGym/master/img/gymbg.jpg);
+    background-image: linear-gradient(#262626b3, #262626b3), url(/img/gymbg.jpg);
     background-clip: border-box;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+}
+
+#topbtn {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    padding: 14px 27px;
+    margin: 0 35px 40px 0;
+    border-radius: 100px;
+    background-color: #50d890;
+    border: none;
+    color: #272727;
+    cursor: pointer;
 }
 
 #navbar {
@@ -267,7 +286,7 @@ body::-webkit-scrollbar-thumb {
     color: #eee;
     width: 100%;
     height: fit-content;
-    background-image: linear-gradient(rgba(38, 38, 38, 0.7), rgba(38, 38, 38, 0.7)), url(https://raw.githubusercontent.com/ritviksakpal/HardStrengthGym/master/img/banner.jpg);
+    background-image: linear-gradient(rgba(38, 38, 38, 0.7), rgba(38, 38, 38, 0.7)), url(/img/banner.jpg);
     background-clip: border-box;
     background-repeat: no-repeat;
     background-position: center;
@@ -419,7 +438,7 @@ body::-webkit-scrollbar-thumb {
     color: #eee;
     width: 100%;
     height: fit-content;
-    background-image: linear-gradient(#262626b3, #262626b3), url(https://raw.githubusercontent.com/ritviksakpal/HardStrengthGym/master/img/banner2.jpg);
+    background-image: linear-gradient(#262626b3, #262626b3), url(/img/banner2.jpg);
     background-clip: border-box;
     background-repeat: no-repeat;
     background-position: center;
@@ -870,4 +889,4 @@ footer {
 }
 
 
-/* status has been updated 08/28/20 */
+/* id=section's responsiveness has been done */
